--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -137,7 +137,7 @@
                                     </div>
                                     <div class="stat-content dib">
                                         <div class="stat-text">Jumlah Pendapatan</div>
-                                        <div class="stat-digit">1,012</div>
+                                        <div class="stat-digit">{{ totalharga }}</div>
                                     </div>
                                 </div>
                             </div>
@@ -149,7 +149,7 @@
                                     </div>
                                     <div class="stat-content dib">
                                         <div class="stat-text">Jumlah Pelanggan</div>
-                                        <div class="stat-digit">{{totalpelanggan}}</div>
+                                        <div class="stat-digit">{{jumlah}}</div>
                                     </div>
                                 </div>
                             </div>
