--- a/app/templates/invoice.html
+++ b/app/templates/invoice.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,11 +22,11 @@
     <link rel="apple-touch-icon" sizes="57x57" href="http://placehold.it/57.png/000/fff">
 
     <!-- Styles -->
-    <link href="css/lib/font-awesome.min.css" rel="stylesheet">
-    <link href="css/lib/themify-icons.css" rel="stylesheet">
-    <link href="css/lib/bootstrap.min.css" rel="stylesheet">
-    <link href="css/lib/helper.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="{% static 'css/lib/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/lib/themify-icons.css' %}" rel="stylesheet">
+    <link href="{% static 'css/lib/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/lib/helper.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 
 <body class="bg-primary">
@@ -38,14 +39,14 @@
                         <div id="invoice-top">
                             <div class="invoice-logo"></div>
                             <div class="invoice-info">
-                                <h2>john doe</h2>
+                                <h2>LOSIK CAR WASH</h2>
                                 <p> hello@Admin Board.com <br> +8801629599859
                                 </p>
                             </div>
                             <!--End Info-->
                             <div class="title">
-                                <h4>Invoice #1069</h4>
-                                <p>Issued: February 15, 2018<br> Payment Due: February 27, 2018
+                                <h4>Invoice #{{idinvoice.idpemesanan}}</h4>
+                                <p>Issued: {{idinvoice.tanggalpesan}}
                                 </p>
                             </div>
                             <!--End Title-->
@@ -58,13 +59,13 @@
 
                             <div class="clientlogo"></div>
                             <div class="invoice-info">
-                                <h2>Client Name</h2>
-                                <p>mariam@gmail.com<br> 555-555-5555
+                                <h2>{{idinvoice.nama}}</h2>
+                                <p>Plat Nomor<br> {{idinvoice.platnomor}}
                                     <br>
                             </div>
 
                             <div id="project">
-                                <h2>Project Description</h2>
+                                <h2>Nota Pembayaran</h2>
                                 <p>Proin cursus, dui non tincidunt elementum, tortor ex feugiat enim, at elementum enim quam vel purus. Curabitur semper malesuada urna ut suscipit.</p>
                             </div>
 
@@ -78,118 +79,31 @@
                                     <table class="table">
                                         <tr class="tabletitle">
                                             <td class="table-item">
-                                                <h2>Item Description</h2>
+                                                <h2>Jenis Layanan</h2>
                                             </td>
                                             <td class="Hours">
-                                                <h2>Hours</h2>
+                                                <h2>Keterangan</h2>
                                             </td>
                                             <td class="Rate">
-                                                <h2>Rate</h2>
+                                                <h2>Harga</h2>
                                             </td>
                                             <td class="subtotal">
-                                                <h2>Sub-total</h2>
-                                            </td>
-                                        </tr>
-
-                                        <tr class="service">
-                                            <td class="tableitem">
-                                                <p class="itemtext">Communication</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">5</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$75</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$375.00</p>
-                                            </td>
-                                        </tr>
-
-                                        <tr class="service">
-                                            <td class="tableitem">
-                                                <p class="itemtext">Asset Gathering</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">3</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$75</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$225.00</p>
-                                            </td>
-                                        </tr>
-
-                                        <tr class="service">
-                                            <td class="tableitem">
-                                                <p class="itemtext">Design Development</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">5</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$75</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$375.00</p>
-                                            </td>
-                                        </tr>
-
-                                        <tr class="service">
-                                            <td class="tableitem">
-                                                <p class="itemtext">Animation</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">20</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$75</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$1,500.00</p>
-                                            </td>
-                                        </tr>
-
-                                        <tr class="service">
-                                            <td class="tableitem">
-                                                <p class="itemtext">Animation Revisions</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">10</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$75</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$750.00</p>
-                                            </td>
-                                        </tr>
-
-                                        <tr class="service">
-                                            <td class="tableitem">
-                                                <p class="itemtext"></p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">HST</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">13%</p>
-                                            </td>
-                                            <td class="tableitem">
-                                                <p class="itemtext">$419.25</p>
-                                            </td>
-                                        </tr>
-
-
-                                        <tr class="tabletitle">
-                                            <td></td>
-                                            <td></td>
-                                            <td class="Rate">
                                                 <h2>Total</h2>
                                             </td>
-                                            <td class="payment">
-                                                <h2>$3,644.25</h2>
+                                        </tr>
+                                        
+                                        <tr class="service">
+                                            <td class="tableitem">
+                                                <p class="itemtext">{{idinvoice.idpaketpelanggan.jenispaket }}</p>
+                                            </td>
+                                            <td class="tableitem">
+                                                <p class="itemtext">{{idinvoice.idpaketpelanggan.keteranganpaket}}</p>
+                                            </td>
+                                            <td class="tableitem">
+                                                <p class="itemtext">{{idinvoice.idpaketpelanggan.harga }}</p>
+                                            </td>
+                                            <td class="tableitem">
+                                                <p class="itemtext">{{idinvoice.idpaketpelanggan.harga }}</p>
                                             </td>
                                         </tr>
 
@@ -198,11 +112,7 @@
                             </div>
                             <!--End Table-->
 
-                            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                                <input type="hidden" name="cmd" value="_s-xclick">
-                                <input type="hidden" name="hosted_button_id" value="QRZ7QTM9XRPJ6">
-                                <input type="image" src="images/paypal.png" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                            </form>
+                            
 
 
                             <div id="legalcopy">
