--- a/app/templates/invoice.html
+++ b/app/templates/invoice.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Focus Admin: Invoice</title>
+    <title>LOSIK Car Wash: Invoice</title>
 
     <!-- ================= Favicon ================== -->
     <!-- Standard -->
