--- a/app/templates/perbarui.html
+++ b/app/templates/perbarui.html
@@ -55,15 +55,35 @@
                 <ul>
                     <li><a href="{% url 'tambahlayanan' %}">Tambah Layanan</a></li>
                     <li><a href="{% url 'tambahpaket' %}">Tambah Paket Layanan</a></li>
-                    <li><a href="#">Rekap Penjualan</a></li>
-                </ul>
-            </li>
-                    
+                    <li><a href="{% url 'adddetaillayanan' %}">Tambah Detail Layanan</a></li>
+                    <li><a href="{% url 'rekap' %}">Rekap Penjualan</a></li>
+                </ul>   <div class="header">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="float-left">
+                                    <div class="hamburger sidebar-toggle">
+                                        <span class="line"></span>
+                                        <span class="line"></span>
+                                        <span class="line"></span>
+                                    </div>
+                                </div>
+                                <div class="float-right">
+                                    <div class="dropdown dib">
+                                        <div class="header-icon">
+                                                <a class="ti-user" href="{% url 'profile' %}" >
+                                                </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
             </div>
         </div>
     </div>
     <!-- /# sidebar -->
-
     <div class="header">
         <div class="container-fluid">
             <div class="row">
@@ -77,29 +97,15 @@
                     </div>
                     <div class="float-right">
                         <div class="dropdown dib">
-                            <div class="header-icon" data-toggle="dropdown">
-                                <span class="user-avatar">Admin
-                                    <i class="ti-angle-down f-s-10"></i>
-                                </span>
-                                <div class="drop-down dropdown-profile dropdown-menu dropdown-menu-right">
-                                    
-                                    <div class="dropdown-content-body">
-                                        <ul>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="ti-user"></i>
-                                                    <span>Profile</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <div class="header-icon">
+                                    <a class="ti-user" href="{% url 'profile' %}" >
+                                    </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
 
 
@@ -147,7 +153,7 @@
                                                         <td>
                                                             <select name="idpaketpelanggan" id="" class="form-control">
                                                                 {% for item in paket %}
-                                                                <option value="{{item.idpaketlayanan}}">{{item.jenispaket}}</option>
+                                                                <option value="{{item.idpaketlayanan}}">{{allpemesananobj.idpaketpelanggan.jenispaket}}</option>
                                                                 {% endfor %}
                                                             </select>
                                                         </td>
