--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -50,7 +50,8 @@
                 <ul>
                     <li><a href="{% url 'tambahlayanan' %}">Tambah Layanan</a></li>
                     <li><a href="{% url 'tambahpaket' %}">Tambah Paket Layanan</a></li>
-                    <li><a href="#">Rekap Penjualan</a></li>
+                    <li><a href="{% url 'adddetaillayanan' %}">Tambah Detail Layanan</a></li>
+                    <li><a href="{% url 'rekap' %}">Rekap Penjualan</a></li>
                 </ul>
             </li>
                     
@@ -58,7 +59,6 @@
         </div>
     </div>
   <!-- /# sidebar -->
-
 
   <div class="header">
     <div class="container-fluid">
@@ -73,30 +73,17 @@
                 </div>
                 <div class="float-right">
                     <div class="dropdown dib">
-                        <div class="header-icon" data-toggle="dropdown">
-                            <span class="user-avatar">Admin
-                                <i class="ti-angle-down f-s-10"></i>
-                            </span>
-                            <div class="drop-down dropdown-profile dropdown-menu dropdown-menu-right">
-                                
-                                <div class="dropdown-content-body">
-                                    <ul>
-                                        <li>
-                                            <a href="{% url 'profile' %}">
-                                                <i class="ti-user"></i>
-                                                <span>Profile</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+                        <div class="header-icon">
+                                <a class="ti-user" href="{% url 'profile' %}" >
+                                </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> 
 </div>
+
 
 
 <div class="content-wrap">
