--- a/app/templates/tampilpaket.html
+++ b/app/templates/tampilpaket.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- theme meta -->
     <meta name="theme-name" content="focus" />
-    <title>LOSIK Car Wash: Admin Dasboardd</title>
+    <title>LOSIK Car Wash: Admin Dasboard</title>
     <!-- ================= Favicon ================== -->
     <!-- Standard -->
     <link rel="shortcut icon" href="http://placehold.it/64.png/000/fff">
@@ -54,7 +54,8 @@
                 <ul>
                     <li><a href="{% url 'tambahlayanan' %}">Tambah Layanan</a></li>
                     <li><a href="{% url 'tambahpaket' %}">Tambah Paket Layanan</a></li>
-                    <li><a href="#">Rekap Penjualan</a></li>
+                    <li><a href="{% url 'adddetaillayanan' %}">Tambah Detail Layanan</a></li>
+                    <li><a href="{% url 'rekap' %}">Rekap Penjualan</a></li>
                 </ul>
             </li>
                     
@@ -76,30 +77,18 @@
                     </div>
                     <div class="float-right">
                         <div class="dropdown dib">
-                            <div class="header-icon" data-toggle="dropdown">
-                                <span class="user-avatar">Admin
-                                    <i class="ti-angle-down f-s-10"></i>
-                                </span>
-                                <div class="drop-down dropdown-profile dropdown-menu dropdown-menu-right">
-                                    
-                                    <div class="dropdown-content-body">
-                                        <ul>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="ti-user"></i>
-                                                    <span>Profile</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <div class="header-icon">
+                                    <a class="ti-user" href="{% url 'profile' %}" >
+                                    </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
+
+
 
 
     <div class="content-wrap">
