--- a/app/templates/updatedetail.html
+++ b/app/templates/updatedetail.html
@@ -54,7 +54,8 @@
                 <ul>
                     <li><a href="{% url 'tambahlayanan' %}">Tambah Layanan</a></li>
                     <li><a href="{% url 'tambahpaket' %}">Tambah Paket Layanan</a></li>
-                    <li><a href="#">Rekap Penjualan</a></li>
+                    <li><a href="{% url 'adddetaillayanan' %}">Tambah Detail Layanan</a></li>
+                    <li><a href="{% url 'rekap' %}">Rekap Penjualan</a></li>
                 </ul>
             </li>
                     
@@ -62,7 +63,6 @@
         </div>
     </div>
     <!-- /# sidebar -->
-
     <div class="header">
         <div class="container-fluid">
             <div class="row">
@@ -76,30 +76,18 @@
                     </div>
                     <div class="float-right">
                         <div class="dropdown dib">
-                            <div class="header-icon" data-toggle="dropdown">
-                                <span class="user-avatar">Admin
-                                    <i class="ti-angle-down f-s-10"></i>
-                                </span>
-                                <div class="drop-down dropdown-profile dropdown-menu dropdown-menu-right">
-                                    
-                                    <div class="dropdown-content-body">
-                                        <ul>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="ti-user"></i>
-                                                    <span>Profile</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <div class="header-icon">
+                                    <a class="ti-user" href="{% url 'profile' %}" >
+                                    </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
+
+
 
 
     <div class="content-wrap">
@@ -146,7 +134,7 @@
                                                         <td>
                                                             <select name="idlayanan" id="" class='form-control'>
                                                                 {% for item in updatedetail %}
-                                                                <option value="{{item.idlayanan}}">{{item.jenislayanan}}</option>
+                                                                <option value="{{item.idlayanan}}">{{detailobj.idlayanan.jenislayanan}}</option>
                                                                 {% endfor %}
                                                             </select>
                                                         </td>
