--- a/app/templates/adddetaillayanan.html
+++ b/app/templates/adddetaillayanan.html
@@ -105,8 +105,8 @@
                         <div class="page-header">
                             <div class="page-title">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="{% url 'detaillayanan' %}">Detail Layanan</a></li>
-                                    <li class="breadcrumb-item active">Tambah Detail Layanan</li>
+                                    <li class="breadcrumb-item"><a href="{% url 'index' %}">Daftar Pemesanan</a></li>
+                                    <li class="breadcrumb-item active">Detail Layanan</li>
                                 </ol>
                             </div>
                         </div>
