--- a/app/templates/tambahlayanan.html
+++ b/app/templates/tambahlayanan.html
@@ -108,8 +108,7 @@
                         <div class="page-header">
                             <div class="page-title">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="{% url 'home' %}">Dashboard</a></li>
-                                    <li class="breadcrumb-item active"><a href="{% url 'tambahlayanan' %}">Tambah Layanan</a></li>
+                                    <li class="breadcrumb-item"><a href="{% url 'tambahlayanan' %}">Tambah Layanan</a></li>
                                     <li class="breadcrumb-item active">Data</li>
                                 </ol>
                             </div>
