--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -156,14 +156,17 @@
                         </div>
                         
                             
-                              <div class="col-sm-8">
+                              <div class="col-sm-12">
                                 <div class="card">
                                     <div class="card-title">
                                         <h4></h4>
                                     </div>
-                                    <div class="card-toggle-body">
+                                    <div class="card-toggle-body col-lg-8">
                                         <div class="button-list">
-                                            <a href="{% url 'createdata' %}" class="btn btn-primary col-lg-8">Tambah Pemesanan</a>
+                                            <a href="{% url 'createdata' %}" 
+                    class="btn btn-lg btn-primary btn-block waves-effect waves-light col-lg-8">
+                                            <i class="ti-pencil-alt"></i> Tambah Pemesanan
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
