--- a/app/templates/tambahpaket.html
+++ b/app/templates/tambahpaket.html
@@ -107,8 +107,7 @@
                         <div class="page-header">
                             <div class="page-title">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="{% url 'home' %}">Dashboard</a></li>
-                                    <li class="breadcrumb-item active"><a href="{% url 'tambahpaket' %}">Tambah Paket Layanan</a></li>
+                                    <li class="breadcrumb-item"><a href="{% url 'tambahpaket' %}">Tambah Paket Layanan</a></li>
                                     <li class="breadcrumb-item active">Data</li>
                                 </ol>
                             </div>
