--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -121,7 +121,7 @@
                     <div class="row">
                       <div class="col-lg-4">
                         <div class="user-photo m-b-30">
-                          <img class="img-fluid" src="{% static 'images/user-profile.jpg' %}" alt="" />
+                          <img class="img-fluid" src="{% static 'images/logo.png' %}" alt="" />
                         </div>
                       </div>
                       <div class="col-lg-8">
@@ -152,19 +152,19 @@
                                 <h4>Contact information</h4>
                                 <div class="phone-content">
                                   <span class="contact-title">Phone:</span>
-                                  <span class="phone-number">+8801629599859</span>
+                                  <span class="phone-number">+62812123243</span>
                                 </div>
                                 <div class="address-content">
                                   <span class="contact-title">Address:</span>
-                                  <span class="mail-address">123, Rajar Goli, South Mugda</span>
+                                  <span class="mail-address">Jl Mangga, Kota Malang</span>
                                 </div>
                                 <div class="email-content">
                                   <span class="contact-title">Email:</span>
-                                  <span class="contact-email">hello@Admin Board.com</span>
+                                  <span class="contact-email">admin@losikcarwash.id</span>
                                 </div>
                                 <div class="website-content">
                                   <span class="contact-title">Website:</span>
-                                  <span class="contact-website">www.Admin Board.com</span>
+                                  <span class="contact-website"><a href="losik.ub.ac.id">www.losikcarwash.id</a></span>
                                 </div>
                               </div>
                             </div>
