--- a/app/templates/invoice.html
+++ b/app/templates/invoice.html
@@ -27,6 +27,18 @@
     <link href="{% static 'css/lib/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/lib/helper.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            var value;
+            var theTotal = 0
+            $("#tumbal").each(function() {
+                value = $(this).html();
+                theTotal = value;
+                $("#result").text(theTotal);
+            });
+        });
+    </script>
 </head>
 
 <body class="bg-primary">
@@ -105,12 +117,12 @@
                                             <td class="tableitem">
                                                 <p class="itemtext">{{idinvoice.idlayanan.jenislayanan}}</p>
                                             </td>
-                                            <td class="tableitem">
+                                            <td class="tableitem" id="tumbal">
                                                 <p class="itemtext">{{idinvoice.idpemesanan.idpaketpelanggan.harga }}</p>
                                                 <p class="itemtext">{{idinvoice.idlayanan.harga }}</p>
                                             </td>
                                             <td class="tableitem">
-                                                <p class="itemtext">{{idinvoice.idpemesanan.idpaketpelanggan.harga }}</p>
+                                                <p class="itemtext" id="result">{{ total }}</p>
                                             </td>
                                         </tr>
 
