--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1404,7 +1404,7 @@ footer p {
   float: left;
   height: 60px;
   width: 60px;
-  background: url(http://michaeltruong.ca/images/logo1.png) no-repeat;
+  background: url({% static 'images/logo.png' }%) no-repeat;
   background-size: 60px 60px;
 }
 .clientlogo {
